# space_odyssey

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  build.sh  configure.sh  run.sh
libs/glad/src/: glad.c
res/shaders/: cloud.frag  cloud.vert  default.frag  default.vert  shader_earth.frag  shader_earth.vert  shader_proc_tex.frag  shader_proc_tex.vert  skybox.frag  skybox.vert  sun.frag  sun.vert
src/: OCamera.cpp  OCamera.hpp  OGame.cpp  OGame.hpp  OGameObject.cpp  OGameObject.hpp  OGraphicsEngine.cpp  OGraphicsEngine.hpp  ORenderUnit.cpp  ORenderUnit.hpp  OResourceUnit.cpp  OResourceUnit.hpp  OShaderUnit.cpp  OShaderUnit.hpp  OWindow.cpp  OWindow.hpp  Shader_Loader.cpp  Shader_Loader.h  main.cpp  preferences.h
src/lib/: glad.c  glad.h
